// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DatetimeText renders loading state 1`] = `null`;

exports[`DatetimeText renders without error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "column",
      "marginTop": 12,
    }
  }
>
  <TextInput
    allowFontScaling={true}
    collapsable={false}
    editable={false}
    jestAnimatedStyle={
      {
        "value": {},
      }
    }
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": {
          "dynamic": {
            "dark": "rgba(255, 255, 255, 0.65)",
            "light": "rgba(19, 19, 19, 0.63)",
          },
        },
        "fontFamily": "Basel Grotesk",
        "fontSize": 15,
        "fontWeight": "400",
        "lineHeight": 19.5,
        "padding": 0,
      }
    }
    text="Thursday, November 1st, 2023"
    underlineColorAndroid="transparent"
    value="Thursday, November 1st, 2023"
  />
</View>
`;

exports[`PriceText renders loading state 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
  testID="price-text"
>
  <TextInput
    allowFontScaling={true}
    collapsable={false}
    editable={false}
    jestAnimatedStyle={
      {
        "value": {
          "fontSize": 106,
        },
      }
    }
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "#131313",
        "fontFamily": "Basel Grotesk",
        "fontSize": 106,
        "fontWeight": "400",
        "lineHeight": 50.879999999999995,
        "padding": 0,
      }
    }
    testID="wholePart"
    text="-"
    underlineColorAndroid="transparent"
    value="-"
  />
</View>
`;

exports[`PriceText renders without error 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
  testID="price-text"
>
  <TextInput
    allowFontScaling={true}
    collapsable={false}
    editable={false}
    jestAnimatedStyle={
      {
        "value": {
          "fontSize": 106,
        },
      }
    }
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "#131313",
        "fontFamily": "Basel Grotesk",
        "fontSize": 106,
        "fontWeight": "400",
        "lineHeight": 50.879999999999995,
        "padding": 0,
      }
    }
    testID="wholePart"
    text="$55"
    underlineColorAndroid="transparent"
    value="$55"
  />
  <TextInput
    allowFontScaling={true}
    collapsable={false}
    editable={false}
    jestAnimatedStyle={
      {
        "value": {
          "color": "rgba(19, 19, 19, 0.35)",
          "fontSize": 106,
        },
      }
    }
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "rgba(19, 19, 19, 0.35)",
        "fontFamily": "Basel Grotesk",
        "fontSize": 106,
        "fontWeight": "400",
        "lineHeight": 50.879999999999995,
        "padding": 0,
      }
    }
    testID="decimalPart"
    text=".00"
    underlineColorAndroid="transparent"
    value=".00"
  />
</View>
`;

exports[`PriceText renders without error less than a dollar 1`] = `
<View
  style={
    {
      "flexDirection": "row",
    }
  }
  testID="price-text"
>
  <TextInput
    allowFontScaling={true}
    collapsable={false}
    editable={false}
    jestAnimatedStyle={
      {
        "value": {
          "fontSize": 106,
        },
      }
    }
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "#131313",
        "fontFamily": "Basel Grotesk",
        "fontSize": 106,
        "fontWeight": "400",
        "lineHeight": 50.879999999999995,
        "padding": 0,
      }
    }
    testID="wholePart"
    text="$0"
    underlineColorAndroid="transparent"
    value="$0"
  />
  <TextInput
    allowFontScaling={true}
    collapsable={false}
    editable={false}
    jestAnimatedStyle={
      {
        "value": {
          "color": "#131313",
          "fontSize": 106,
        },
      }
    }
    maxFontSizeMultiplier={1.2}
    style={
      {
        "color": "#131313",
        "fontFamily": "Basel Grotesk",
        "fontSize": 106,
        "fontWeight": "400",
        "lineHeight": 50.879999999999995,
        "padding": 0,
      }
    }
    testID="decimalPart"
    text=".0500"
    underlineColorAndroid="transparent"
    value=".0500"
  />
</View>
`;

exports[`RelativeChangeText renders loading state 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 2,
      "marginTop": 2,
    }
  }
  testID="relative-price-change"
>
  <View
    style={
      {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
    testID="text-placeholder"
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "position": "relative",
        }
      }
    >
      <View
        accessibilityElementsHidden={true}
        importantForAccessibility="no-hide-descendants"
      >
        <Text
          allowFontScaling={true}
          maxFontSizeMultiplier={1.4}
          style={
            {
              "color": {
                "dynamic": {
                  "dark": "transparent",
                  "light": "transparent",
                },
              },
              "fontFamily": "Basel Grotesk",
              "fontSize": 19,
              "fontWeight": "400",
              "lineHeight": 24.7,
              "opacity": 0,
            }
          }
          suppressHighlighting={true}
        >
          00.00%
        </Text>
      </View>
      <View
        style={
          {
            "backgroundColor": {
              "dynamic": {
                "dark": "#1F1F1F",
                "light": "#F9F9F9",
              },
            },
            "borderBottomLeftRadius": 999999,
            "borderBottomRightRadius": 999999,
            "borderTopLeftRadius": 999999,
            "borderTopRightRadius": 999999,
            "bottom": "5%",
            "flexDirection": "column",
            "left": 0,
            "position": "absolute",
            "right": 0,
            "top": "5%",
          }
        }
      />
    </View>
  </View>
</View>
`;

exports[`RelativeChangeText renders without error 1`] = `
<View
  style={
    {
      "alignItems": "center",
      "flexDirection": "row",
      "gap": 2,
      "marginTop": 2,
    }
  }
  testID="relative-price-change"
>
  <RNSVGSvgView
    align="xMidYMid"
    bbHeight={16}
    bbWidth={16}
    collapsable={false}
    fill="none"
    focusable={false}
    meetOrSlice={0}
    minX={0}
    minY={0}
    strokeWidth={2}
    style={
      [
        {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        {
          "height": 16,
          "width": 16,
        },
        {
          "flex": 0,
          "height": 16,
          "width": 16,
        },
      ]
    }
    vbHeight={24}
    vbWidth={24}
  >
    <RNSVGGroup
      fill={null}
      propList={
        [
          "fill",
          "strokeWidth",
        ]
      }
      strokeWidth={2}
    >
      <RNSVGPath
        d="M10.6979 16.2453L6.31787 9.75247C5.58184 8.66118 6.2058 7 7.35185 7L16.6482 7C17.7942 7 18.4182 8.66243 17.6821 9.75247L13.3021 16.2453C12.623 17.2516 11.377 17.2516 10.6979 16.2453Z"
        fill={
          {
            "type": 2,
          }
        }
        propList={
          [
            "fill",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
  <TextInput
    allowFontScaling={true}
    collapsable={false}
    editable={false}
    jestAnimatedStyle={
      {
        "value": {
          "color": "#E10F0F",
        },
      }
    }
    maxFontSizeMultiplier={1.4}
    style={
      {
        "color": "#E10F0F",
        "fontFamily": "Basel Grotesk",
        "fontSize": 19,
        "fontWeight": "400",
        "lineHeight": 24.7,
        "padding": 0,
      }
    }
    testID="relative-change-text"
    text="10.00%"
    underlineColorAndroid="transparent"
    value="10.00%"
  />
</View>
`;
